# serializer version: 1
# name: test_norm_class
  tuple(
    '[3 2 3 2 2 3 3 3 2 2 3]',
    '''
      [5.91795349e-01 1.01960946e+00 1.02181564e+00 6.94773068e-01
       1.31811274e+00 7.09255041e-01 8.45275758e-01 1.15907557e+00
       9.83550830e-01 1.38197512e+00 8.34348073e-01]
    ''',
    '''
      [-3.56827005e-01 -3.51140216e-01 -3.45181665e-01 -3.82153619e-01
       -3.60947798e-01 -3.53681808e-01 -3.57954508e-01 -3.61808604e-01
       -3.52904142e-01 -3.61058998e-01 -3.45492023e-01]
    ''',
  )
# ---
# name: test_norm_class_thresh
  tuple(
    '[3 2 3 2 0 3 3 3 2 0 3]',
    '''
      [5.91795349e-01 1.01960946e+00 1.02181564e+00 6.94773068e-01
       1.31811274e+00 7.09255041e-01 8.45275758e-01 1.15907557e+00
       9.83550830e-01 1.38197512e+00 8.34348073e-01]
    ''',
    '''
      [-3.56827005e-01 -3.51140216e-01 -3.45181665e-01 -3.82153619e-01
       -3.60947798e-01 -3.53681808e-01 -3.57954508e-01 -3.61808604e-01
       -3.52904142e-01 -3.61058998e-01 -3.45492023e-01]
    ''',
  )
# ---
